src/main/java/com/example/helpmeassignment/global/error/ErrorProperty.java
package com.example.helpmeassignment.global.error;

public interface ErrorProperty {
    int status();

    String message();
}
